--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,8 +1,16 @@
 @import './modules/_navbar.scss';
+@import './modules/homeSection.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+}
+
+// Cursor Home Page
+.txt-type > .txt {
+    border-right: 0.2rem crimson solid;
+
 }
