--- a/sass/modules/_homeSection.scss
+++ b/sass/modules/_homeSection.scss
@@ -3,7 +3,10 @@
     display: flex;
     height: 100vh;
     font-family: 'Ubuntu', sans-serif;
-    color: #434343
+    color: #434343;
+
+    background: url(/images/background.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .home .max-width{
