--- a/sass/modules/_navbar.scss
+++ b/sass/modules/_navbar.scss
@@ -3,7 +3,7 @@
 .navbar{
     position: fixed;
     width: 100%;
-    background: #434343;
+    // background: #434343;
     padding: 10px 0px;
     font-family: 'Ubuntu', sans-serif;
 }
@@ -15,7 +15,7 @@
 }
 
 .max-width{
-    width: 1700px;
+    width: 85%;
     padding: 0px 80px;
     margin: auto;
 }
@@ -32,7 +32,7 @@
 
 .navbar .menu li a{
     font-size: 18px;
-    color: #fff;   
+    color: #434343;   
     font-weight: 450;
     margin-left: 25px;
     letter-spacing: 2px;
