--- a/sass/modules/_homeSection.scss
+++ b/sass/modules/_homeSection.scss
@@ -9,6 +9,10 @@
     background-size: cover;
 }
 
+.home-content{
+    margin-bottom: 125px;
+}
+
 .home .max-width{
     margin: auto 0 auto 40px;
 }
@@ -28,10 +32,35 @@
 .home .home-content .text-3
 {
     font-size: 25px;
-    margin: 5px 0;
     padding: 10px 0 0 180px;
 }
 
 .home .home-content .text-3 span{
     color: crimson;
+}
+
+// Media Queries
+
+@media screen and (max-width: 768px)
+{
+
+    .home-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .home .home-content .text-2
+    {
+        font-size: 50px;
+        font-weight: 600;
+        margin-left: -3px;
+    }
+
+    .home .home-content .text-3
+    {
+        font-size: 20px;
+        margin: 15px 0;
+        padding: 0;
+    }
 }
