--- a/sass/modules/_navbar.scss
+++ b/sass/modules/_navbar.scss
@@ -1,8 +1,9 @@
 
 
 .navbar{
-    position: fixed;
-    width: 100%;
+    // position: fixed;
+    margin: auto;
+    width: 90%;
     // background: #434343;
     padding: 10px 0px;
     font-family: 'Ubuntu', sans-serif;
@@ -46,3 +47,79 @@
 }
 
 // Burger Menu
+.burgerMenu{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.burgerMenu:hover{
+   cursor: pointer;
+}
+
+.burgerMenu .line{
+    width: 30px;
+    height: 2px;
+    background: #000;
+}
+
+.activeBurger{
+    display: none;
+}
+
+// Burger Menu animation class which will add on click in javascript
+
+.toggle .line1{
+    transform: rotate(45deg);
+}
+
+.toggle .line2{
+   opacity: 0;
+}
+
+.toggle .line3{
+    transform: rotate(-45deg);
+}
+
+
+// Media Queries
+
+@media screen and (max-width: 768px)
+{
+    .burgerMenu{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    
+    .burgerMenu .line{
+        width: 30px;
+        height: 2px;
+        background: #000;
+    }
+
+    .menu{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        background: #434343;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        transition: all 0.5s ease;
+        opacity: 0;
+    }
+
+    .navbar .menu li a{
+        color: white;
+    }
+
+    .show{
+        left: 0;
+        opacity: 1;
+    }
+
+}
