--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,5 +1,7 @@
 @import './modules/_navbar.scss';
 @import './modules/homeSection.scss';
+@import './modules/_buttons.scss';
+@import './modules/_gallary.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 *{
