--- a/sass/modules/_gallary.scss
+++ b/sass/modules/_gallary.scss
@@ -39,3 +39,37 @@
     }
 
 }
+
+.gallaryCon
+{
+    width: 90%;
+    height: 80vh;
+    // max-width: 120rem;
+
+    display: flex;
+    align-items: center;
+    // background: red;
+}
+
+.image-gallary
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-gap: 1.5rem;
+
+    width: 100%;
+
+    a{
+        width: 100%;
+        height: 18rem;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
