--- a/sass/modules/_gallary.scss
+++ b/sass/modules/_gallary.scss
@@ -42,8 +42,8 @@
 
 .gallaryCon
 {
-    width: 90%;
-    height: 80vh;
+    width: 95%;
+    height: 90vh;
     // max-width: 120rem;
 
     display: flex;
@@ -57,11 +57,15 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-gap: 1.5rem;
-
+    grid-template-areas: 
+                'img-1 img-2 img-8 img-8'
+                'img-1 img-2 img-8 img-8'
+                'img-1 img-3 img-6 img-5';
     width: 100%;
+    margin: auto;
 
     a{
-        width: 100%;
+        width: 105%;
         height: 18rem;
         background-position: center;
         background-repeat: no-repeat;
@@ -71,5 +75,72 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        text-decoration: none;
+
+        ion-icon{
+            color: rgba(255,255,255,0.6);
+            font-size: 2rem;
+            position: relative;
+            z-index: 100;
+            padding: 1rem 3rem;
+            border: 2px solid rgba(255,255,255,0.6);
+            border-radius: 0.4rem;
+            opacity: 0;
+
+            transition: opacity 0.5s;
+        }
     }
+}
+
+.image-gallary  a::before
+{
+    content:'';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.6);
+
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.image-gallary a:hover ion-icon,
+.image-gallary a:hover::before {
+    opacity: 1;
+}
+
+.img-1{
+    grid-area: img-1;
+    min-height: 36.5rem;
+    background-image: url('/images/img-1.jpg');
+}
+.img-2{
+    grid-area: img-2;
+    background-image: url('/images/img-2.jpg');
+}
+.img-3{
+    grid-area: img-3;
+    background-image: url('/images/img-3.jpg');
+}
+// .img-4{
+//     grid-area: img-4;
+//     background-image: url('/images/img-4.jpg');
+// }
+.img-5{
+    grid-area: img-5;
+    background-image: url('/images/img-5.jpg');
+}
+.img-6{
+    grid-area: img-6;
+    background-image: url('/images/img-6.jpg');
+}
+// .img-7{
+//     grid-area: img-7;
+//     background-image: url('/images/img-7.jpg');
+// }
+.img-8{
+    grid-area: img-8;
+    background-image: url('/images/img-8.jpg');
 }
