--- a/sass/master.scss
+++ b/sass/master.scss
@@ -3,6 +3,7 @@
 @import './modules/_buttons.scss';
 @import './modules/_portfolio.scss';
 @import './modules/_gallary.scss';
+@import './modules/_about.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 *{
