--- a/sass/modules/_buttons.scss
+++ b/sass/modules/_buttons.scss
@@ -4,7 +4,10 @@
 {
     display: flex;
     justify-content: space-evenly;
-    width: 40%;
+    width: 30%;
+    margin-left: auto;
+    margin-right: 200px;
+    margin-bottom: 100px;
     // background-color: red;
 }
 
