--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -63,7 +63,7 @@
 .image-item:hover .image img{
     filter: grayscale(1);
     cursor: pointer;
-
+    border: 5px solid lightseagreen;
 }
 
 .image-item{
@@ -81,10 +81,10 @@
 {
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 800;
-    letter-spacing: 5px;
-    color: #fff;
+    letter-spacing: 2px;
+    color: rgb(255, 251, 0);
 
     position: absolute;
     top: 50%;
@@ -99,6 +99,6 @@
 .image-item:hover .text{
     bottom: 50%;
     opacity: 1;
-    background: #434343;
+    background: #86ddff;
     cursor: pointer;
 }   
