--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -86,3 +86,162 @@
 }
 
 // aboutMe para Ends
+
+
+// Media Queries
+
+@media screen and (max-width: 650px)
+{
+    .myImage img{
+        display: none;
+    }
+
+    .aboutTitle{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: -1;
+
+        p{
+            font-weight: 900;
+            font-size: 30px;
+            margin-bottom: 160px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px)
+{
+
+    .aboutWrap
+    {
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        margin: auto;
+        margin-top: 120px;
+    }
+
+    .aboutContent
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .aboutContainer
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        width: 100%;
+        // height: 80vh;
+        margin: auto;
+
+        // background: red;
+    }
+    .aboutContent{
+        width: 100%;
+    }
+
+    .aboutTitle{
+        display: flex;
+        justify-content: center;
+        z-index: -1;
+
+        p{
+            font-weight: 900;
+            font-size: 50px;
+        }
+    }
+
+    .aboutMe {
+        width: 60%;
+    }
+    
+    .aboutMe p
+    {
+            font-size: 1.1rem;
+            text-align: justify;
+            line-height: 35px;
+            padding-bottom: 50px;
+    }
+
+    .myImage img
+    {
+        width: 40vw;
+        height: auto;
+        padding: 50px 0;
+    }
+}
+
+@media screen and (max-width: 950px)
+{
+
+    .aboutContainer
+    {
+        width: 90%;
+    }
+
+    .aboutMe {
+        width: 80%;
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 1300px)
+{
+    .aboutTitle{
+        display: flex;
+        justify-content: flex-end;
+        z-index: -1;
+
+        p{
+            font-weight: 900;
+            font-size: 60px;
+        }
+    }
+
+    .aboutMe {
+        width: 70%;
+        display: flex;
+    }
+    
+    .aboutMe p
+    {
+            font-size: 1.15rem;
+            text-align: justify;
+            line-height: 35px;
+            padding-bottom: 50px;
+    }
+}
+
+@media screen and (max-width: 1000px)
+{
+    .aboutTitle{
+        display: flex;
+        justify-content: flex-end;
+        z-index: -1;
+
+        p{
+            font-weight: 900;
+            font-size: 55px;
+        }
+    }
+
+    .aboutMe {
+        width: 80%;
+        display: flex;
+    }
+    
+    .aboutMe p
+    {
+            font-size: 1.1rem;
+            text-align: justify;
+            line-height: 35px;
+            padding-bottom: 50px;
+    }
+}
