--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -171,11 +171,8 @@
             padding-bottom: 50px;
     }
 
-    .myImage img
-    {
-        width: 40vw;
-        height: auto;
-        padding: 50px 0;
+    .myImage img{
+        display: none;
     }
 }
 
