--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -1,21 +1,117 @@
 footer{
     max-width: 100%;
     height: 60vh;
-    background-color: lightgrey;
+    background-color: #434343;
 
     display: flex;
     justify-content: center;
     align-items: center;
+    text-decoration: none;
+    list-style: none;
 }
 
 .footerContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+
+
+    width: 100vw;
+    height: 50vh;
+    margin-top: 40px;
+    // background-color: red;
 }
 
-div.logo a img{
-    width: 50px;
+div.logoF a img{
+    width: 70px;
     height: auto;
+    padding: 10px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+}
+
+div.tagLine
+{
+    // width: 18%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    text-align: center;
+    line-height: 25px;
+    color: #fff;
+}
+
+.media-link
+{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 20%;
+    // background: crimson;
+
+    i{
+        font-size: 2rem;
+        color: #fff;
+        transition: color 0.5s ease;
+    }
+
+    i:hover{
+        cursor: pointer;
+        color: rgb(170, 170, 170);;
+    }
+}
+
+.menuFooter{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    width: 30%;
+
+    li{
+        display: inline-block;
+
+        a{
+            font-family: 'ubuntu',sans-serif;
+            font-size: 15px;
+            font-weight: 500;
+            color: #fff;
+        }
+    }
+}
+
+p.copyright{
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
+    text-align: center;
+    color: white;
+}
+
+// Media Queries
+
+@media screen and (max-width: 768px)
+{
+    .media-link i{
+        padding-left: 20px;
+    }
+
+    .menuFooter{
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 1000px)
+{
+    .media-link i{
+        font-size: 1.8rem;
+    }
+}
+
+@media screen and (max-width: 1300px)
+{
+    .media-link{
+        width: 25%;
+    }
 }
