portfolio Front End

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -4,6 +4,7 @@
 @import './modules/_footer.scss';
 @import './modules/_about.scss';
 @import './modules/_contact.scss';
+@import './modules/_portfolio.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 *{
