--- a/sass/modules/_homeSection.scss
+++ b/sass/modules/_homeSection.scss
@@ -5,7 +5,7 @@
     font-family: 'Ubuntu', sans-serif;
     color: #434343;
 
-    background: url(/images/background.jpg) no-repeat center;
+    background-image: url("images/background.jpg") no-repeat center;
     background-size: cover;
     overflow: hidden;
 }
