--- a/sass/modules/_contact.scss
+++ b/sass/modules/_contact.scss
@@ -12,7 +12,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 3em;
     font-weight: bold;
-    color: 434343;
+    color: #434343;
 }
 
 .contactSubText{
