--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -95,6 +95,22 @@
 }
 // media queries
 
+@media screen and (max-width: 425px){
+    .container .carContent{ 
+        h2
+        {
+            font-size: 25px;
+        }
+        p{
+            font-size: 16px;
+        }
+    }
+
+    .showreel p{
+        font-size: 20px;
+    }
+}
+
 @media screen and (max-width: 768px)
 {
     .container{
