--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -13,11 +13,6 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-
-}
-
-.show-data{
-    display: block;
 }
 
 .thumbnails img{
@@ -28,15 +23,13 @@
 
 .thumbnails img:hover{
     cursor: pointer;
-    transform: scale(1.2);
+    transform: scale(0.95);
 }
-
 .carContent{
-    display: flex;
+    // display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    // display: none;
 
     // background: orange;
     width: 60%;
@@ -44,9 +37,10 @@
 
     h2{
         font-family: 'Roboto', sans-serif;
-        font-size: 50px;
+        font-size: 30px;
         text-transform: uppercase;
         font-weight: 800;
+        color: #434343;
     }
 
     p{
