--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -58,6 +58,33 @@
 
 }
 
+#openTitle{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    // background: red;
+
+    width: 60%;
+
+    h2{
+        font-family: 'Roboto', sans-serif;
+        font-size: 50px;
+        text-transform: uppercase;
+        font-weight: 800;
+        color: crimson;
+    }
+
+    p{
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        line-height: 30px;
+        text-align: justify;
+        
+    }
+
+}
+
 // Data Show Up
 
 #show-data{
@@ -165,10 +192,43 @@
         }
     
     }
+
     .showreel video{
         width: 100%;
         height: auto;
         padding: 60px;
+    }
+
+    #openTitle{
+        // background: red;
+        margin-top: 100px;
+        width: 80%;
+        height: 60vh;
+    
+        h2{
+            font-size: 30px;
+        }
+    
+        p{
+            font-size: 15px;
+        }
+    }
+}
+
+@media screen and (min-width: 769px){
+    #openTitle{
+        // background: red;
+        margin-top: 100px;
+        width: 80%;
+        height: 60vh;
+    
+        h2{
+            font-size: 30px;
+        }
+    
+        p{
+            font-size: 15px;
+        }
     }
 }
 
