--- a/sass/modules/_portfolio.scss
+++ b/sass/modules/_portfolio.scss
@@ -63,6 +63,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     // background: red;
 
     width: 60%;
@@ -125,6 +126,10 @@
         p{
             font-size: 16px;
         }
+    }
+
+    .showreel{
+        margin-top: 20px;
     }
 
     .showreel p{
@@ -223,7 +228,7 @@
         height: 60vh;
     
         h2{
-            font-size: 30px;
+            font-size: 25px;
         }
     
         p{
