--- a/sass/master.scss
+++ b/sass/master.scss
@@ -1,17 +1,20 @@
 @import './modules/_navbar.scss';
-@import './modules/homeSection.scss';
+@import './modules/_homeSection.scss';
 @import './modules/_buttons.scss';
 @import './modules/_footer.scss';
 @import './modules/_about.scss';
 @import './modules/_contact.scss';
-@import './modules/_portfolio.scss';
+// @import './modules/_portfolio.scss';
+@import './modules/_homegsap.scss';
+@import './modules/_work.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@700&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    text-decoration: none; 
 }
 
 // Cursor Home Page
