--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -10,6 +10,20 @@ footer{
     list-style: none;
 }
 
+// work page footer
+.work-footer{
+    max-width: 100%;
+    height: 60vh;
+    background-color: #434343;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    list-style: none;
+    margin-top: 85%;
+}
+
 .footerContainer{
     display: flex;
     flex-direction: column;
