--- a/sass/master.scss
+++ b/sass/master.scss
@@ -7,6 +7,7 @@
 // @import './modules/_portfolio.scss';
 @import './modules/_homegsap.scss';
 @import './modules/_work.scss';
+@import './modules/partworksection';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@700&display=swap');
 
