--- a/sass/modules/_work.scss
+++ b/sass/modules/_work.scss
@@ -42,19 +42,28 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 
-
     padding: 60px 10px;
-    div.box{
+    // position: relative;
+    img{
+        position: relative;
+        display: block;
         width: 100%;
+    }
+    
+    img:hover{
+        opacity: 0.5;
+        cursor: pointer;
     }
 }
 
-.gallery .box{
-    width: 300px;
-    height: 300px;
-    background: lightgrey;
-    border: 1px solid #000;
-}
+// .gallery .box{
+//     width: 300px;
+//     height: 300px;
+//     background: lightgrey;
+//     border: 1px solid #000;
+
+    
+// }
 
 .show-reel{
     display: flex;
@@ -86,6 +95,8 @@ span.reel
     color: red;
     -webkit-text-stroke: 1px red;
 }
+// portfolio - part ONE slider
+
 
 // Media Queries
 @media screen and (max-width: 768px){
