--- a/sass/modules/_partworksection.scss
+++ b/sass/modules/_partworksection.scss
@@ -1,7 +1,8 @@
+
 .first-eight-pop{
     width: 100%;
     height: auto;
-    background: rgb(255, 193, 193);
+    background: rgb(255, 255, 255);
 
     position: absolute;
     top: 0;
@@ -10,9 +11,10 @@
     padding: 60px;
     z-index: 999;
     // margin:0 auto;
-    transform:scale(0);
+    transform:translateX(100%);
+    transition: transform 1s ease-out;
 
-    display: flex;
+    display: flex; 
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -58,4 +60,8 @@
             }
         }
     }
+}
+
+.first-eight-pop.active-pop{
+    transform: translateX(0);
 }
