--- a/sass/modules/_work.scss
+++ b/sass/modules/_work.scss
@@ -31,11 +31,11 @@
 }
 
 .portfolio{
-    width: 80vw;
+    width: 100%;
     height: 90vh;
     // background: red;
-    position: absolute;
-    left: 20vw;
+    // position: absolute;
+    // left: 20vw;
 }
 
 .gallery{
