--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -22,6 +22,11 @@ footer{
     text-decoration: none;
     list-style: none;
     margin-top: 85%;
+
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: -99;
 }
 
 .footerContainer{
