--- a/sass/modules/_partworksection.scss
+++ b/sass/modules/_partworksection.scss
@@ -22,6 +22,8 @@
     .cross-button{
         width: 100%;
         font-size: 2rem;
+        // background: yellow;
+        padding: 20px 0;
     }
 
     .cross-button:hover{
@@ -32,12 +34,13 @@
     .product-section{
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
+        // background: red;
 
         img{
             width: 80%;
-            padding: 20px;
+            padding: 80px 0;
         }
 
         .product-about{
@@ -64,4 +67,42 @@
 
 .first-eight-pop.active-pop{
     transform: translateX(0);
+}
+
+.title-pop{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: bolder;
+    color: #434343;
+}
+
+// media Queries
+
+@media screen and (max-width: 1400px)
+{
+    .first-eight-pop{
+        padding: 40px;
+    }
+}
+
+@media screen and (max-width: 1000px)
+{
+    .first-eight-pop{
+        padding: 30px;
+    }
+    .title-pop{
+        font-size: 2rem;
+    }
+
+    .product-about
+    {
+        p:nth-child(1){
+            font-size: 1.5rem;
+        }
+
+        p:nth-child(2){
+            font-size: 1.2rem;
+        }
+    }
 }
